tests/cases/attributes/errors/attribute-derive-default-struct-case.ari
@derive(Default(value))
struct Box {
  value: i64,
}

fn main() -> i64 {
  return 0;
}
